--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 </head>
 <body>
     <header>
-        <div id="perf">
-            <p><img id="perfil" src="https://github.com/M0rdek4y/Repositorio-de-midia/blob/master/media/images/png/logos/logospace02.png?raw=true" alt="Imagem de perfil"></p>
-            <h1>Marques Design</h1>
-            <h2>20 Anos</h2>
+        <div id="apre">
+            <p class="teste"><img id="perfil" src="https://github.com/M0rdek4y/Repositorio-de-midia/blob/master/media/images/png/logos/logospace02.png?raw=true" alt="Imagem de perfil"></p>
+            <div id="text" class="teste">
+                <h1>Marques Design</h1>
+                <h2>20 Anos</h2>
+                <p>Designer Grafico</p>
+                <p>Web Designer</p>
+                <p>Web Developer</p>
+            </div>
         </div>
     </header>
     <main>
