--- a/index.html
+++ b/index.html
@@ -10,22 +10,30 @@
 </head>
 <body>
     <header>
-        <div id="apre">
+        <div id="head">
             <p class="teste"><img id="perfil" src="https://github.com/M0rdek4y/Repositorio-de-midia/blob/master/media/images/png/logos/logospace02.png?raw=true" alt="Imagem de perfil"></p>
             <div id="text" class="teste">
-                <h1>Marques Design</h1>
+                <h1>Alan Marques de Aguiar</h1>
                 <h2>20 Anos</h2>
-                <p>Designer Grafico</p>
-                <p>Web Designer</p>
+                <p>Brasília, Brazil</p>
+                <p>+5561993487203</p>
                 <p>Web Developer</p>
-            </div>
-        </div>
     </header>
     <main>
-        <h2>Sobre mim.</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rerum accusantium aspernatur nulla ex deserunt in inventore, quas quod nesciunt at cumque repellat, illo dignissimos reiciendis ab hic aliquid fugiat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima obcaecati aliquid delectus ut! Eveniet optio expedita labore sapiente deserunt quo quia debitis consectetur quam perspiciatis velit dolores iusto, dolore sunt.</p>
-        <h2>Experiência Profissional</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quos aliquam, voluptatem consequatur ex nobis deserunt repellendus. Mollitia, debitis? Numquam, sit maxime obcaecati eum corrupti vitae. Animi exercitationem dolorem inventore? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, odit error totam itaque facere quidem eum nobis dolores expedita, accusantium nemo nesciunt unde nisi quas animi commodi repudiandae sint possimus! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora quos deleniti cupiditate et amet explicabo autem, voluptates quidem est dolor recusandae cumque vitae, molestiae quasi quam ipsum distinctio delectus quis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod maxime delectus vero neque exercitationem facere fugiat, consectetur recusandae saepe modi, incidunt pariatur libero sit a nam dicta molestias hic maiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque magnam sunt sit. Voluptate consectetur culpa aliquid ullam numquam aspernatur dignissimos repellat temporibus doloremque tempora, illum eius, quia delectus! Voluptates, magnam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quis beatae a natus nulla saepe amet, accusantium perferendis illum ipsa placeat! Dolores ut magni officia, iusto a quasi sapiente ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure et omnis corporis nostrum culpa facere reiciendis. Cum optio numquam exercitationem amet, magnam ipsam neque totam ipsum! Labore voluptate assumenda veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat assumenda similique veniam, praesentium impedit molestiae quia suscipit quas expedita voluptate iste? Libero facilis ratione voluptatibus ut, adipisci quis fuga molestias.</p>
+        <article id="infome" class="tex">
+            <h2>Sobre mim.</h2>
+            <p>Intermediary in Design ✢ Beginner Programmer ✢ Amateur CS:GO player for @KIDS.<br>Web Developer, Web Designer & Designer Graphic.</p>
+        </article>
+        <article id="exp" class="tex">
+            <h2>Experiência Profissional</h2>
+            <h3>11º Depósito De Suprimentos</h3>
+            <p class="cargo">Graphic Design Specialist</p>
+            <p class="funcao">Confeccionar Cartões de Convite para eventos e Generais aniversariantes, confecção de flyers de eventos, comemorações e dias comemorativos, auxiliar da seção de Comunicação Social e Relações Públicas.<br><span class="data">Agosto de 2021 - outubro de 2022 (1 ano 3 meses) Brazil</span></p>
+            <h3>FDS Chegou Eventos</h3>
+            <p class="cargo">Designer Grafico<br></p>
+            <p class="funcao">Confecção de flyers de eventos<span class="data">maio de 2019 - agosto de 2020 (1 ano 4 meses) Brazil</span></p>
+            <h3>1000 Lanches</h3>
+        </article>
     </main>
     <footer>
         <p>Desenvolvido por <a href="https://m0rdek4y.github.io/" target="_blank" rel="external">Marques</a></p>
